@@ -1,0 +1,2 @@
+Use secure copyright file specification URI.
+Fixed-Lintian-Tags: insecure-copyright-format-uri, wiki-copyright-format-uri
