@@ -1,0 +1,12 @@
+#!/usr/bin/make -f
+
+%:
+	dh $@
+
+override_dh_strip:
+	dh_strip --dbgsym-migration='amule-dbg (<< 1:2.3.2-2~)' || dh_strip
+
+override_dh_test:
+ifneq (${SOME_TEST_THING}, 1)
+	dh_test
+endif
