@@ -1,0 +1,2 @@
+Drop transition for old debug package migration.
+Fixed-Lintian-Tags: debug-symbol-migration-possibly-complete
