@@ -1,0 +1,9 @@
+#!/usr/bin/make -f
+
+%:
+	dh $@
+
+override_dh_test:
+ifneq (${SOME_TEST_THING}, 1)
+	dh_test
+endif
